<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessingAround</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weather_change">Weather Change</string>
    <string name="weather_sunshine">Sunshine</string>
    <string name="weather_rainy">Rainy</string>
    <string name="weather_snowy">Snowy</string>
    <string name="users_name">Your Name</string>

</resources>
