<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center|top"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_change"
        android:textSize="40dp"
        android:id="@+id/weather_change"/>



   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_sunshine"
        android:onClick="setWeatherSunshine"
        android:id="@+id/sunshine_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_rainy"
        android:onClick="setWeatherRainy"
        android:id="@+id/rainy_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_snowy"
        android:onClick="setWeatherSnow"
        android:id="@+id/snowy_button"/>

   </LinearLayout>

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/users_name"
        android:id="@+id/user_name"/>




</LinearLayout>